修改了条目

--- a/src/main/resources/templates/themes/default/header.html
+++ b/src/main/resources/templates/themes/default/header.html
@@ -33,6 +33,9 @@
             <img th:src="@{/user/img/logo.png}" alt="首页"/>
         </a>
         <div class="navbar-menu">
+            <a th:href="${commons.site_url('/archives')}">热点新闻</a>
+            <a th:href="${commons.site_url('/archives')}">美图</a>
+            <a th:href="${commons.site_url('/archives')}">宅男福利</a>
             <a th:href="${commons.site_url('/archives')}">归档</a>
             <a th:href="${commons.site_url('/links')}">友链</a>
             <a th:href="${commons.site_url('/about')}">关于</a>
