--- a/src/main/resources/templates/themes/default/header.html
+++ b/src/main/resources/templates/themes/default/header.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
-    <meta name="renderer" content=""/>
-    <meta name="referrer" content="webkit|no-referrer" />
+   <!-- <meta name="renderer" content=""/>-->
+    <meta name="referrer" content="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta http-equiv="Cache-Control" content="no-transform"/>
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
