--- a/src/main/resources/templates/themes/default/index.html
+++ b/src/main/resources/templates/themes/default/index.html
@@ -2,15 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="themes/default/header::header(null,null)"></div>
 <body>
+<div id="overlib" style="top: 951px; left: 957px; display: none;"><img src="https://dyncdn.me/mimages/34577/over_opt.jpg" border="0"></div>
 <div class="main-content index-page clearfix">
     <div class="post-lists">
         <div class="post-lists-body">
             <div class="post-list-item" th:each="article: ${articles.list}">
                 <div class="post-list-item-container">
-                    <a th:href="${commons.permalink(article)}" class="item-thumb  bg-deepgrey"
+                   <a th:href="${commons.permalink(article)}" class="item-thumb  bg-deepgrey"
                        th:style="'background-image:url('+@{${commons.show_thumb(article)}}+');'">
-                        <dir class="item-desc" th:text="${article.tags}"></dir>
                     </a>
+                    <!--<a onmouseover="return overlib('<img src=\'@{${commons.show_thumb(article)}}\' border=0>')"
+                       onmouseout="return nd();" href="${commons.permalink(article)}" title="">
+                        ${article.tags}</a>-->
                     <div class="item-slant reverse-slant &lt; bg-deepgrey"></div>
                     <div class="item-slant"></div>
                     <div class="item-label">
