解决下载预览简历的问题

--- a/src/main/resources/templates/themes/default/header.html
+++ b/src/main/resources/templates/themes/default/header.html
@@ -41,7 +41,7 @@
             <a th:href="${commons.site_url('/archives/ESSAYS')}">似水流年</a>
             <a th:href="${commons.site_url('/links')}">友情链接</a>
             <a th:href="${commons.site_url('/about')}">关于博主</a>
-            <a href="/user/fanwengang-JD2019.pdf">下载博主简历</a>
+            <a href="/user/fanwengangJD2019.pdf">下载博主简历</a>
         </div>
         <div class="navbar-search" onclick="">
             <span class="icon-search"></span>
