--- a/src/main/resources/templates/themes/default/header.html
+++ b/src/main/resources/templates/themes/default/header.html
@@ -42,6 +42,7 @@
             <a th:href="${commons.site_url('/links')}">友情链接</a>
             <a th:href="${commons.site_url('/about')}">关于博主</a>
             <a href="/user/fanwengang-JD2019.pdf">下载博主简历</a>
+            <a href="/user/liudan-JD2020.pdf">刘丹简历</a>
         </div>
         <div class="navbar-search" onclick="">
             <span class="icon-search"></span>
