--- a/src/main/resources/templates/admin/article_list.html
+++ b/src/main/resources/templates/admin/article_list.html
@@ -10,6 +10,14 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="page-title">文章管理</h4>
+                        <a href="javascript:void(0)" th:onclick="'doPull(\'T66Y\');'"
+                           class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
+                                class="fa fa-edit"></i> <span>get小草</span></a>
+
+                        <a href="javascript:void(0)" th:onclick="'doPull(\'RAR\');'"
+                           class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
+                                class="fa fa-edit"></i> <span>getRar</span></a>
+
                     </div>
                     <div class="col-md-12">
                         <table class="table table-striped table-bordered">
@@ -29,16 +37,22 @@
                                     <td>
                                         <a th:href="@{'/admin/article/'+${post.cid}}" th:text="${post.title}"></a>
                                     </td>
-                                    <td><th:block th:text="${commons.fmtdate(post.created, 'yyyy-MM-dd HH:mm:ss')}"/></td>
-                                    <td><th:block th:text="${post.hits}"/></td>
-                                    <td><th:block th:text="${post.categories}"/></td>
+                                    <td>
+                                        <th:block th:text="${commons.fmtdate(post.created, 'yyyy-MM-dd HH:mm:ss')}"/>
+                                    </td>
+                                    <td>
+                                        <th:block th:text="${post.hits}"/>
+                                    </td>
+                                    <td>
+                                        <th:block th:text="${post.categories}"/>
+                                    </td>
                                     <td>
                                         <th:block th:if="${post.status == 'publish'}">
                                             <span class="label label-success">已发布</span>
                                         </th:block>
-                                       <th:block th:if="${post.status == 'draft'}">
-                                           <span class="label label-default">草稿</span>
-                                       </th:block>
+                                        <th:block th:if="${post.status == 'draft'}">
+                                            <span class="label label-default">草稿</span>
+                                        </th:block>
                                     </td>
                                     <td>
                                         <a th:href="@{'/admin/article/'+${post.cid}}"
@@ -47,7 +61,8 @@
                                         <a href="javascript:void(0)" th:onclick="'delPost('+${post.cid}+');'"
                                            class="btn btn-danger btn-sm waves-effect waves-light m-b-5"><i
                                                 class="fa fa-trash-o"></i> <span>删除</span></a>
-                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" th:href="${commons.permalink(post)}+'/preview'"
+                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5"
+                                           th:href="${commons.permalink(post)}+'/preview'"
                                            target="_blank"><i
                                                 class="fa fa-rocket"></i> <span>预览</span></a>
                                     </td>
@@ -68,15 +83,16 @@
 <script type="text/javascript">
     /*<![CDATA[*/
     var tale = new $.tale();
+
     function delPost(cid) {
         tale.alertConfirm({
-            title:'确定删除该文章吗?',
+            title: '确定删除该文章吗?',
             then: function () {
                 tale.post({
-                    url : '/admin/article/delete',
+                    url: '/admin/article/delete',
                     data: {cid: cid},
                     success: function (result) {
-                        if(result && result.success){
+                        if (result && result.success) {
                             tale.alertOkAndReload('文章删除成功');
                         } else {
                             tale.alertError(result.msg || '文章删除失败');
@@ -86,6 +102,25 @@
             }
         });
     }
+
+    function doPull(tar) {
+        tale.doPull({
+            title: '该接口是个异步方法！您确定要执行吗?',
+            then: function () {
+                tale.post({
+                    url: '/admin/article/pull?tarSite=' + tar,
+                    success: function (result) {
+                        if (result && result.success) {
+                            tale.alertOkAndReload('操作成功');
+                        } else {
+                            tale.alertOkAndReload('操作失败');
+                        }
+                    }
+                });
+            }
+        });
+    }
+
     /*]]>*/
 </script>
 </body>
